set(ULLIB_HEADERS
    include/ULApp.h
    include/ULApps.h
    include/ULBars.h
    include/ULButtons.h
    include/ULClassFactory.h
    include/ULComboBox.h
    include/ULCOMDllApp.h
    include/ULCommDlgs.h
    include/ULCOMs.h
    include/ULConsole.h
    include/ULControls.h
    include/ULDateTimePicker.h
    include/ULDB.h
    include/ULDC.h
    include/ULDlg.h
    include/ULDlgs.h
    include/ULDllApp.h
    include/ULEdit.h
    include/ULFileVersionInfo.h
    include/ULFolderDlg.h
    include/ULFrames.h
    include/ULFrameWnd.h
    include/ULGDI.h
    include/ULGObjs.h
    include/ULHotKey.h
    include/ULLib.h
    include/ULLibLink.h
    include/ULLibNS.h
    include/ULListBox.h
    include/ULListCtrl.h
    include/ULListCtrlEx.h
    include/ULMDIChildWnd.h
    include/ULMDIClientWnd.h
    include/ULMDIFrameWnd.h
    include/ULMenu.h
    include/ULMessageMap.inl
    include/ULOther.h
    include/ULProfileReg.h
    include/ULProgressBar.h
    include/ULProperty.h
    include/ULPropPage.h
    include/ULPropSheet.h
    include/ULPtr.inl
    include/ULQueueThread.h
    include/ULReBar.h
    include/ULRebarCtrl.h
    include/ULRegServ.h
    include/ULRes.h
    include/ULResDef.h
    include/ULSkinDlg.h
    include/ULSlider.h
    include/ULSplitter.h
    include/ULStates.h
    include/ULStatic.h
    include/ULStatusBar.h
    include/ULStatusBarCtrl.h
    include/ULSubClass.h
    include/ULThemeClient.h
    include/ULThread.h
    include/ULThreads.h
    include/ULToolBar.h
    include/ULToolBarCtrl.h
    include/ULToolTip.h
    include/ULTrayIcon.h
    include/ULWaitCursor.h
    include/ULWnd.h
    include/ULWndCtrl.h
    include/ULWndCtrlList.h
    include/ULWndCtrls.h
    include/ULWnds.h
)

SET(ULLIB_SRC
    src/ULApp.cpp
    src/ULButtons.cpp
    src/ULComboBox.cpp
    src/ULCOMDllApp.cpp
    src/ULCommDlgs.cpp
    src/ULConsole.cpp
    src/ULDateTimePicker.cpp
    src/ULDB.cpp
    src/ULDC.cpp
    src/ULDlg.cpp
    src/ULDllApp.cpp
    src/ULEdit.cpp
    src/ULFileVersionInfo.cpp
    src/ULFolderDlg.cpp
    src/ULFrameWnd.cpp
    src/ULGObjs.cpp
    src/ULHotKey.cpp
    src/ULListBox.cpp
    src/ULListCtrl.cpp
    src/ULListCtrlEx.cpp
    src/ULMDIChildWnd.cpp
    src/ULMDIClientWnd.cpp
    src/ULMDIFrameWnd.cpp
    src/ULOther.cpp
    src/ULProfileReg.cpp
    src/ULProgressBar.cpp
    src/ULPropPage.cpp
    src/ULPropSheet.cpp
    src/ULQueueThread.cpp
    src/ULReBar.cpp
    src/ULRebarCtrl.cpp
    src/ULRegServ.cpp
    src/ULRes.cpp
    src/ULSkinDlg.cpp
    src/ULSlider.cpp
    src/ULSplitter.cpp
    src/ULStatic.cpp
    src/ULStatusBar.cpp
    src/ULStatusBarCtrl.cpp
    src/ULSubClass.cpp
    src/ULThemeClient.cpp
    src/ULThread.cpp
    src/ULToolBar.cpp
    src/ULToolBarCtrl.cpp
    src/ULToolTip.cpp
    src/ULTrayIcon.cpp
    src/ULWaitCursor.cpp
    src/ULWnd.cpp
    src/ULWndCtrl.cpp
    src/ULWndCtrlList.cpp
)

add_library(ULLib STATIC ${ULLIB_HEADERS} ${ULLIB_SRC})
target_link_libraries(ULLib PUBLIC shlwapi.lib UxTheme.lib)
target_include_directories(ULLib PUBLIC include)
